// Protos for the core API structs. This is what we will be using when we're sending data from backend to frontend.

syntax = "proto3";

option go_package = "aether-core/protos/feobjects";

package feobjects;

message CompiledBoardEntity {
  string Fingerprint = 1;
  bool SelfCreated = 2;
  string Name = 3;
  string Description = 4;
  CompiledContentSignalsEntity CompiledContentSignals = 5;
  CompiledUserEntity Owner = 6;
  repeated string BoardOwners = 7;
  int64 Creation = 8;
  int64 LastUpdate = 9;
  string Meta = 10;
  repeated CompiledThreadEntity ChildThreads = 11;
  int32 ThreadsCount = 12;
  int32 UserCount = 13;
  bool Subscribed = 14;
  bool Notify = 15;
  int64 LastSeen = 16;
  bool Whitelisted = 17;
}

message CompiledThreadEntity {
  string Fingerprint = 1;
  string Board = 2;
  bool SelfCreated = 3;
  string Name = 4;
  string Body = 5;
  string Link = 6;
  CompiledContentSignalsEntity CompiledContentSignals = 7;
  CompiledUserEntity Owner = 8;
  int64 Creation = 9;
  int64 LastUpdate = 10;
  string Meta = 11;
  repeated CompiledPostEntity ChildPosts = 12;
  int32 PostsCount = 13;
}

message CompiledPostEntity {
 string Fingerprint = 1;
 string Board = 2;
 string Thread = 3;
 string Parent = 4;
 bool SelfCreated = 5;
 string Body = 6;
 CompiledContentSignalsEntity CompiledContentSignals = 7;
 CompiledUserEntity Owner = 8;
 int64 Creation = 9;
 int64 LastUpdate = 10;
 string Meta = 11;
 repeated CompiledPostEntity Children = 12;
}

message CompiledUserEntity {
  string Fingerprint = 1;
  string NonCanonicalName = 2;
  int64 Creation = 3;
  int64 LastUpdate = 4;
  int64 LastRefreshed = 5;
  CompiledUserSignalsEntity CompiledUserSignals = 6;
  int64 Expiry = 7;
  string Info = 8;
  string Meta = 9;
}

message CompiledContentSignalsEntity {
  string TargetFingerprint = 1;
  // ATD
  int32 Upvotes = 2;
  int32 Downvotes = 3;
  bool SelfUpvoted = 4;
  bool SelfDownvoted = 5;
  int64 SelfATDCreation = 6;
  int64 SelfATDLastUpdate = 7;
  string SelfATDFingerprint = 8;
  repeated ExplainedSignalEntity Reports = 9;
  // bool SelfReported = 10;
  repeated ExplainedSignalEntity ModBlocks = 11;
  repeated ExplainedSignalEntity ModApprovals = 12;
  bool ByMod = 13;
  bool ByFollowedPerson = 14;
  bool ByBlockedPerson = 15;
  bool ByOP = 16;
  bool ModBlocked = 17;
  bool ModApproved = 18;
  int64 LastRefreshed = 19;
}

message ExplainedSignalEntity {
  string SourceFp = 1;
  string Reason = 2;
  int64 Creation = 3;
  int64 LastUpdate = 4;
}

message CompiledUserSignalsEntity {
  string TargetFingerprint = 1;
  string Domain = 2;
  bool FollowedBySelf = 3;
  bool BlockedBySelf = 4;
  int32 FollowerCount = 5;
  string CanonicalName = 6;
  string CNameSourceFingerprint = 7;
  string SelfPEFingerprint = 8;
  int64 SelfPECreation = 9;
  int64 SelfPELastUpdate = 10;
  bool MadeModBySelf = 11;
  bool MadeNonModBySelf = 12;
  bool MadeModByDefault = 13;
  bool MadeModByNetwork = 14;
  bool MadeNonModByNetwork = 15;
}

message AmbientBoardEntity {
  string Fingerprint = 1;
  string Name = 2;
  int64 LastUpdate = 3;
  int64 LastSeen = 4;
}